--- a/index.html
+++ b/index.html
@@ -4,10 +4,118 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Shop</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header>
+        <div class="container banner">
+            <div class="banner-text">
+                <h1 class="banner-title">Let's make beautiful flowers a part of your life.</h1>
+                <p class="common-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <button class="banner-button">Shop Now</button>
+            </div>
+            <div class="banner-img">
+                <img src="./images/pngwing 10.png" alt="">
+            </div>
+        </div>
+    </header>
+    <main>
+        <section>
+            <div class="container">
+                <div class="featured">
+                    <h2 class="featured-title">Our Featured Flowers</h2>
+                    <p class="common-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                </div>
+                <div class="section-content">
+                    <div class="flower">
+                        <div class="flower-img-one">
+                            <img src="./images/pngwing 6.png" alt="">
+                        </div>
+                        <p class="flower-description">Pink Flower Tree</p>
+                    </div>
+                    <div class="flower">
+                        <div class="flower-img-two">
+                            <img src="./images/pngwing 5.png" alt="">
+                        </div>
+                        <p class="flower-description">Pink Flower Tree</p>
+                    </div>
+                    <div class="flower">
+                        <div class="flower-img-three">
+                            <img src="./images/pngwing 7.png" alt="">
+                        </div>
+                        <p class="flower-description">Pink Flower Tree</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="support">
+            <div class="container">
+                <div class="support-container">
+                    <div class="support-container-next">
+                        <div class="support-container-img">
+                            <img src="./images/Group 57.png" alt="">
+                        </div>
+                        <p>Same Day Delivery. Click & Collect.</p>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="./images/Group 58.png" alt="">
+                        </div>
+                        <p>Fresh Flowers. Local Growers.</p>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="./images/Group 59.png" alt="">
+                        </div>
+                        <p>24/7 Free Support.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="hot-deal">
+            <div class="container hot-deal-container">
+                <div class="hot-deal-text-container">
+                    <div class="hot-deal-text">
+                        <h2>Hot Deal ! Sale Up To 25% <span>Off</span></h2>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    </div>
+                    <div class="hot-deal-btn">
+                        <button class="banner-button">Sign Up</button>
+                    </div>
+                </div>
+                <div class="hot-deal-img">
+                    <img src="./images/pngwing 8.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="instagram-text">
+                    <h3>Instagram</h3>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                </div>
+                <div class="instagram-images">
+                    <img src="./images/Flower 01.png" alt="">
+                    <img src="./images/Rectangle 4.png" alt="">
+                    <img src="./images/Rectangle 5.png" alt="">
+                    <img src="./images/Rectangle 6.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section id="newsletter">
+            <div class="container newsletter-main">
+                <div class="newsletter-container">
+                    <h2>Get The Latest Deals</h2>
+                    <p>$30 coupon for first shopping</p>
+                </div>
+                <form>
+                    <input placeholder="Email" type="email" name="" id="">
+                    <button class="banner-button">Subscribe</button>
+                </form>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
